<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grass">

    <TextView
        android:id="@+id/list_players_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_players_fragment_title"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        android:textColor="@color/green_number"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:id="@+id/ll_list_players"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="4dp"
        android:background="@drawable/border_statistic"

        app:layout_constraintTop_toBottomOf="@id/list_players_title"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/player_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/text_list_players"
            android:layout_weight="6"
            android:text="@string/user_name"/>

        <TextView
            android:id="@+id/player_number_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/text_list_players"
            android:text="@string/number_of_game_short"/>
        <TextView
            android:id="@+id/player_min_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/text_list_players"
            android:layout_weight="1"
            android:text="@string/min_number_of_game_short"/>
        <TextView
            android:id="@+id/player_max_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/text_list_players"
            android:layout_weight="1"
            android:text="@string/max_number_of_game_short"/>
        <TextView
            android:id="@+id/player_mean_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/text_list_players"
            android:layout_weight="1"
            android:text="@string/mean_number_of_game_short"/>
    </LinearLayout>

    <!--<View
        android:id="@+id/view_line_liat_players"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/grey_number"
        app:layout_constraintTop_toBottomOf="@id/ll_list_players"
        app:layout_constraintStart_toStartOf="parent"/>
-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_list_players"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/ll_list_players"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <FrameLayout
        android:id="@+id/loading_list_players"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:visibility="gone">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>